added team logos

--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
     <!-- West Side -->
     <div class="round round-1">
         <div class="matchup" data-round="1" data-game="1">
-            <button class="team">Winnipeg Jets</button>
+            <button class="team" data-name="Winnipeg Jets" data-logo="logos/winnipeg-jets.svg">
+                <img src="logos/winnipeg-jets.svg" alt="Winnipeg Jets Logo" />
+                <span>Winnipeg Jets</span>
+            </button>              
             <button class="team">WC2</button>
         </div>
         <div class="matchup" data-round="1" data-game="2">
-            <button class="team">Dallas Stars</button>
-            <button class="team">Colorado Avalanche</button>
+            <button class="team" data-name="Dallas Stars" data-logo="logos/dallas-stars.svg">
+                <img src="logos/dallas-stars.svg" alt="Dallas Stars Logo" />
+                <span>Dallas Stars</span>
+            </button> 
+            <button class="team" data-name="Colorado Avalanche" data-logo="logos/colorado-avalanche.svg">
+                <img src="logos/colorado-avalanche.svg" alt="Colorado Avalanche Logo" />
+                <span>Colorado Avalanche</span>
+            </button>
         </div>
         <div class="matchup" data-round="1" data-game="3">
-            <button class="team">Las Vegas Knights</button>
+            <button class="team" data-name="Las Vegas Knights" data-logo="logos/las-vegas-knights.svg">
+                <img src="logos/las-vegas-knights.svg" alt="Las Vegas Knights Logo" />
+                <span>Las Vegas Knights</span>
+            </button>
             <button class="team">WC1</button>
         </div>
         <div class="matchup" data-round="1" data-game="4">
@@ -84,22 +96,39 @@
     <div class="round round-1">
         <div class="matchup" data-round="1" data-game="5">
             <button class="team">Toronto Maple Leafs</button>
-            <button class="team">Ottawa Senators</button>
+            <button class="team" data-name="Ottawa Senators" data-logo="logos/ottawa-senators.svg">
+                <img src="logos/ottawa-senators.svg" alt="Ottawa Senators Logo" />
+                <span>Ottawa Senators</span>
+            </button>
         </div>
         <div class="matchup" data-round="1" data-game="6">
             <button class="team">Tampa Bay Lightning</button>
             <button class="team">Florida Panthers</button>
         </div>
         <div class="matchup" data-round="1" data-game="7">
-            <button class="team">Washington Capitals</button>
+            <button class="team" data-name="Washington Capitals" data-logo="logos/washington-capitals.svg">
+                <img src="logos/washington-capitals.svg" alt="Washington Capitals Logo" />
+                <span>Washington Capitals</span>
+            </button>
             <button class="team">WC2</button>
         </div>
         <div class="matchup" data-round="1" data-game="8">
-            <button class="team">Carolina Hurricanes</button>
-            <button class="team">New Jersey Devils</button>
+            <button class="team" data-name="Carolina Hurricanes" data-logo="logos/carolina-hurricanes.svg">
+                <img src="logos/carolina-hurricanes.svg" alt="Carolina Hurricanes Logo" />
+                <span>Carolina Hurricanes</span>
+            </button>
+            <button class="team" data-name="New Jersey Devils" data-logo="logos/new-jersey-devils.svg">
+                <img src="logos/new-jersey-devils.svg" alt="New Jersey Devils Logo" />
+                <span>New Jersey Devils</span>
+            </button>
         </div>
     </div>
 
+  </div>
+  <div id="champion-display">
+    <h2>Stanley Cup Champion:</h2>
+    <div id="champion-name">TBD</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
