--- a/index.html
+++ b/index.html
@@ -12,32 +12,44 @@
     <!-- West Side -->
     <div class="round round-1">
         <div class="matchup" data-round="1" data-game="1">
-            <button class="team" data-name="Winnipeg Jets" data-logo="logos/winnipeg-jets.svg">
+            <button class="team jets" data-name="Winnipeg Jets" data-logo="logos/winnipeg-jets.svg">
                 <img src="logos/winnipeg-jets.svg" alt="Winnipeg Jets Logo" />
                 <span>Winnipeg Jets</span>
             </button>              
-            <button class="team">WC2</button>
+            <button class="team wc2" data-name="WC2" data-logo="logos/wc2.svg">
+                <img src="logos/wc2.svg" alt="WC2 Logo" />
+                <span>WC2</span>
+            </button>
         </div>
         <div class="matchup" data-round="1" data-game="2">
-            <button class="team" data-name="Dallas Stars" data-logo="logos/dallas-stars.svg">
+            <button class="team stars" data-name="Dallas Stars" data-logo="logos/dallas-stars.svg">
                 <img src="logos/dallas-stars.svg" alt="Dallas Stars Logo" />
                 <span>Dallas Stars</span>
             </button> 
-            <button class="team" data-name="Colorado Avalanche" data-logo="logos/colorado-avalanche.svg">
+            <button class="team avalanche" data-name="Colorado Avalanche" data-logo="logos/colorado-avalanche.svg">
                 <img src="logos/colorado-avalanche.svg" alt="Colorado Avalanche Logo" />
                 <span>Colorado Avalanche</span>
             </button>
         </div>
         <div class="matchup" data-round="1" data-game="3">
-            <button class="team" data-name="Las Vegas Knights" data-logo="logos/las-vegas-knights.svg">
+            <button class="team knights" data-name="Las Vegas Knights" data-logo="logos/las-vegas-knights.svg">
                 <img src="logos/las-vegas-knights.svg" alt="Las Vegas Knights Logo" />
                 <span>Las Vegas Knights</span>
             </button>
-            <button class="team">WC1</button>
+            <button class="team wc1" data-name="WC1" data-logo="logos/wc1.svg">
+                <img src="logos/wc1.svg" alt="WC1 Logo" />
+                <span>WC1</span>
+            </button>
         </div>
         <div class="matchup" data-round="1" data-game="4">
-            <button class="team">Los Angeles Kings</button>
-            <button class="team">Edmonton Oilers</button>
+            <button class="team kings" data-name="Los Angeles Kings" data-logo="logos/los-angeles-kings.svg">
+                <img src="logos/los-angeles-kings.svg" alt="Los Angeles Kings Logo" />
+                <span>Los Angeles Kings</span>
+            </button>
+            <button class="team oilers" data-name="Edmonton Oilers" data-logo="logos/edmonton-oilers.svg">
+                <img src="logos/edmonton-oilers.svg" alt="Edmonton Oilers Logo" />
+                <span>Edmonton Oilers</span>
+            </button>
         </div>
     </div>
 
@@ -95,29 +107,41 @@
     <!--  -->
     <div class="round round-1">
         <div class="matchup" data-round="1" data-game="5">
-            <button class="team">Toronto Maple Leafs</button>
-            <button class="team" data-name="Ottawa Senators" data-logo="logos/ottawa-senators.svg">
+            <button class="team maple-leafs" data-name="Toronto Maple Leafs" data-logo="logos/toronto-maple-leafs.svg">
+                <img src="logos/toronto-maple-leafs.svg" alt="Toronto Maple Leafs Logo" />
+                <span>Toronto Maple Leafs</span>
+            </button>
+            <button class="team senators" data-name="Ottawa Senators" data-logo="logos/ottawa-senators.svg">
                 <img src="logos/ottawa-senators.svg" alt="Ottawa Senators Logo" />
                 <span>Ottawa Senators</span>
             </button>
         </div>
         <div class="matchup" data-round="1" data-game="6">
-            <button class="team">Tampa Bay Lightning</button>
-            <button class="team">Florida Panthers</button>
+            <button class="team lightning" data-name="Tampa Bay Lightning" data-logo="logos/tampa-bay-lightning.svg">
+                <img src="logos/tampa-bay-lightning.svg" alt="Tampa Bay Lightning Logo" />
+                <span>Tampa Bay Lightning</span>
+            </button>
+            <button class="team panthers" data-name="Florida Panthers" data-logo="logos/florida-panthers.svg">
+                <img src="logos/florida-panthers.svg" alt="Florida Panthers Logo" />
+                <span>Florida Panthers</span>
+            </button>
         </div>
         <div class="matchup" data-round="1" data-game="7">
-            <button class="team" data-name="Washington Capitals" data-logo="logos/washington-capitals.svg">
+            <button class="team capitals" data-name="Washington Capitals" data-logo="logos/washington-capitals.svg">
                 <img src="logos/washington-capitals.svg" alt="Washington Capitals Logo" />
                 <span>Washington Capitals</span>
             </button>
-            <button class="team">WC2</button>
+            <button class="team wc2" data-name="WC2" data-logo="logos/wc2.svg">
+                <img src="logos/wc2.svg" alt="WC2 Logo" />
+                <span>WC2</span>
+            </button>
         </div>
         <div class="matchup" data-round="1" data-game="8">
-            <button class="team" data-name="Carolina Hurricanes" data-logo="logos/carolina-hurricanes.svg">
+            <button class="team hurricanes" data-name="Carolina Hurricanes" data-logo="logos/carolina-hurricanes.svg">
                 <img src="logos/carolina-hurricanes.svg" alt="Carolina Hurricanes Logo" />
                 <span>Carolina Hurricanes</span>
             </button>
-            <button class="team" data-name="New Jersey Devils" data-logo="logos/new-jersey-devils.svg">
+            <button class="team devils" data-name="New Jersey Devils" data-logo="logos/new-jersey-devils.svg">
                 <img src="logos/new-jersey-devils.svg" alt="New Jersey Devils Logo" />
                 <span>New Jersey Devils</span>
             </button>
