finalised styles and added username

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <h1>2025 NHL Playoff Bracket</h1>
+  <div id="user-name-section">
+    <label for="user-name"></label>
+    <input type="text" id="user-name" name="user-name" placeholder="Enter your name" />
+  </div>
   <div id="bracket-container">
     <!-- West Side -->
     <div class="round round-1">
