--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </button>
         </div>
         <div class="matchup" data-round="1" data-game="3">
-            <button class="team knights" data-name="Vegas Golden Knights" data-logo="logos/las-vegas-knights.svg">
-                <img src="logos/las-vegas-knights.svg" alt="Vegas Golden Knights Logo" />
+            <button class="team knights" data-name="Vegas Golden Knights" data-logo="logos/vegas-golden-knights.svg">
+                <img src="logos/vegas-golden-knights.svg" alt="Vegas Golden Knights Logo" />
                 <span>Vegas Golden Knights</span>
             </button>
             <button class="team wc1" data-name="WC1" data-logo="logos/wc1.svg">
