added the new wildcard teams in the west

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <img src="logos/winnipeg-jets.svg" alt="Winnipeg Jets Logo" />
                 <span>Winnipeg Jets</span>
             </button>              
-            <button class="team wc2" data-name="WC2" data-logo="logos/wc2.svg">
-                <img src="logos/wc2.svg" alt="WC2 Logo" />
-                <span>WC2</span>
+            <button class="team blues" data-name="St. Louis Blues" data-logo="logos/st-louis-blues.svg">
+                <img src="logos/st-louis-blues.svg" alt="St. Louis Blues Logo" />
+                <span>St. Louis Blues</span>
             </button>
         </div>
         <div class="matchup" data-round="1" data-game="2">
@@ -40,9 +40,9 @@
                 <img src="logos/vegas-golden-knights.svg" alt="Vegas Golden Knights Logo" />
                 <span>Vegas Golden Knights</span>
             </button>
-            <button class="team wc1" data-name="WC1" data-logo="logos/wc1.svg">
-                <img src="logos/wc1.svg" alt="WC1 Logo" />
-                <span>WC1</span>
+            <button class="team wild" data-name="Minnesota Wild" data-logo="logos/minnesota-wild.svg">
+                <img src="logos/minnesota-wild.svg" alt="Minnesota Wild Logo" />
+                <span>Minnesota Wild</span>
             </button>
         </div>
         <div class="matchup" data-round="1" data-game="4">
@@ -151,7 +151,6 @@
             </button>
         </div>
     </div>
-
   </div>
   <div id="champion-display">
     <h2>Stanley Cup Champion:</h2>
