analysis buttons and top goal scorer everywhere

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <button class="team stars" data-name="Dallas Stars" data-logo="logos/dallas-stars.svg">
                 <img src="logos/dallas-stars.svg" alt="Dallas Stars Logo" />
                 <span>Dallas Stars</span>
-            </button> 
+            </button>
+            <button class="analysis-btn" data-matchup="stars-vs-avalanche">Analysis</button>  
             <button class="team avalanche" data-name="Colorado Avalanche" data-logo="logos/colorado-avalanche.svg">
                 <img src="logos/colorado-avalanche.svg" alt="Colorado Avalanche Logo" />
                 <span>Colorado Avalanche</span>
@@ -41,6 +42,7 @@
                 <img src="logos/vegas-golden-knights.svg" alt="Vegas Golden Knights Logo" />
                 <span>Vegas Golden Knights</span>
             </button>
+            <button class="analysis-btn" data-matchup="knights-vs-wild">Analysis</button>
             <button class="team wild" data-name="Minnesota Wild" data-logo="logos/minnesota-wild.svg">
                 <img src="logos/minnesota-wild.svg" alt="Minnesota Wild Logo" />
                 <span>Minnesota Wild</span>
@@ -51,6 +53,7 @@
                 <img src="logos/los-angeles-kings.svg" alt="Los Angeles Kings Logo" />
                 <span>Los Angeles Kings</span>
             </button>
+            <button class="analysis-btn" data-matchup="kings-vs-oilers">Analysis</button>
             <button class="team oilers" data-name="Edmonton Oilers" data-logo="logos/edmonton-oilers.svg">
                 <img src="logos/edmonton-oilers.svg" alt="Edmonton Oilers Logo" />
                 <span>Edmonton Oilers</span>
@@ -112,10 +115,11 @@
     <!--  -->
     <div class="round round-1">
         <div class="matchup" data-round="1" data-game="5">
-            <button class="team maple-leafs" data-name="Toronto Maple Leafs" data-logo="logos/toronto-maple-leafs.svg">
+            <button class="team leafs" data-name="Toronto Maple Leafs" data-logo="logos/toronto-maple-leafs.svg">
                 <img src="logos/toronto-maple-leafs.svg" alt="Toronto Maple Leafs Logo" />
                 <span>Toronto Maple Leafs</span>
             </button>
+            <button class="analysis-btn" data-matchup="leafs-vs-senators">Analysis</button>
             <button class="team senators" data-name="Ottawa Senators" data-logo="logos/ottawa-senators.svg">
                 <img src="logos/ottawa-senators.svg" alt="Ottawa Senators Logo" />
                 <span>Ottawa Senators</span>
@@ -126,6 +130,7 @@
                 <img src="logos/tampa-bay-lightning.svg" alt="Tampa Bay Lightning Logo" />
                 <span>Tampa Bay Lightning</span>
             </button>
+            <button class="analysis-btn" data-matchup="lightning-vs-panthers">Analysis</button>
             <button class="team panthers" data-name="Florida Panthers" data-logo="logos/florida-panthers.svg">
                 <img src="logos/florida-panthers.svg" alt="Florida Panthers Logo" />
                 <span>Florida Panthers</span>
@@ -136,6 +141,7 @@
                 <img src="logos/washington-capitals.svg" alt="Washington Capitals Logo" />
                 <span>Washington Capitals</span>
             </button>
+            <button class="analysis-btn" data-matchup="capitals-vs-canadiens">Analysis</button>
             <button class="team canadiens" data-name="Montréal Canadiens" data-logo="logos/montreal-canadiens.svg">
                 <img src="logos/montreal-canadiens.svg" alt="Montréal Canadiens Logo" />
                 <span>Montréal Canadiens</span>
@@ -146,6 +152,7 @@
                 <img src="logos/carolina-hurricanes.svg" alt="Carolina Hurricanes Logo" />
                 <span>Carolina Hurricanes</span>
             </button>
+            <button class="analysis-btn" data-matchup="hurricanes-vs-devils">Analysis</button>
             <button class="team devils" data-name="New Jersey Devils" data-logo="logos/new-jersey-devils.svg">
                 <img src="logos/new-jersey-devils.svg" alt="New Jersey Devils Logo" />
                 <span>New Jersey Devils</span>
